--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <li>Tính năng 1</li>
             <li>Tính năng 2</li>
         </ul>
-        <a href="https://github.com/Thanhchung8888/my-app-installer/releases/download/v1.0.0/MyApp_Setup.exe" class="download-button">Tải xuống ngay</a>
+        <a href="https://github.com/Thanhchung8888/my-app-installer/releases/download/v1.0.0/setup.exe" class="download-button">Tải xuống ngay</a>
        
         </div>
     </section>
