--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
         <p><strong>Version 1.0.0</strong> đã được phát hành!</p>
         <p>Tính năng mới:</p>
         <ul>
-            <li>Tính năng 1</li>
-            <li>Tính năng 2</li>
+            <li>Tính năng 1 cập nhật giao diện</li>
+            <li>Tính năng 2 cập nhật bàn tính</li>
         </ul>
         <a href="https://github.com/Thanhchung8888/my-app-installer/releases/download/v1.0.0/setup.exe" class="download-button">Tải xuống ngay</a>
        
