--- a/index.html
+++ b/index.html
@@ -124,16 +124,19 @@
             </video>
 <!-- Phần tiếp theo-->
              <div class="release-container">
-        <h2>Phiên bản mới nhất</h2>
-        <p><strong>Version 1.0.0</strong> đã được phát hành!</p>
-        <p>Tính năng mới:</p>
-        <ul>
-            <li>Tính năng 1 cập nhật giao diện</li>
-            <li>Tính năng 2 cập nhật bàn tính</li>
-        </ul>
-        <a href="https://github.com/Thanhchung8888/my-app-installer/releases/download/v1.0.0/setup.exe" class="download-button">Tải xuống ngay</a>
-       
-        </div>
+    <h2>Phiên bản mới nhất</h2>
+    <p><strong>Version 1.0.0</strong> đã được phát hành vào ngày 12/07/2024!</p>
+    <p>BeamFCApp - Ứng dụng tính toán kết cấu dầm</p>
+    <p>Tính năng mới:</p>
+    <ul>
+        <li>Cập nhật giao diện người dùng</li>
+        <li>Cải thiện độ chính xác của bảng tính</li>
+    </ul>
+    <p>Yêu cầu hệ thống: Windows 10 trở lên, .NET Framework 4.8</p>
+    <p>Kích thước file: 15MB</p>
+    <a href="https://github.com/Thanhchung8888/my-app-installer/releases/download/v1.0.0/setup.exe" class="download-button">Tải xuống ngay</a>
+    <p><a href="https://github.com/Thanhchung8888/my-app-installer/releases">Xem tất cả các phiên bản</a></p>
+</div>
     </section>
 
     <footer>
