--- a/index.html
+++ b/index.html
@@ -130,9 +130,10 @@
     <p>Tính năng mới:</p>
     <ul>
         <li>Cập nhật giao diện người dùng</li>
+        <li>Cập nhật tính năng mới</li>
         <li>Cải thiện độ chính xác của bảng tính</li>
     </ul>
-    <p>Yêu cầu hệ thống: Windows 10 trở lên, .NET Framework 4.8</p>
+    <p>Yêu cầu hệ thống: Windows 10 trở lên , .NET Framework 4.8</p>
     <p>Kích thước file: 15MB</p>
     <a href="https://github.com/Thanhchung8888/my-app-installer/releases/download/v1.0.0/setup.exe" class="download-button">Tải xuống ngay</a>
     <p><a href="https://github.com/Thanhchung8888/my-app-installer/releases">Xem tất cả các phiên bản</a></p>
